# Test_and_Exercises_cpp

./: .gitignore  README.md
MapperReducer/: .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md  mapper_reducer.cpp  vcpkg.json
MapperReducer/.devcontainer/: .devcontainer.json
MapperReducer/Assets/: config.json
MapperReducer/InputFiles/: pg-tom_sawyer.txt
MapperReducer/mapperReducer/: CMakeLists.txt  main.cpp
MapperReducer/mapperReducer/include/: ThreadPool.h  mapper_reducer.h  utils.h
MapperReducer/mapperReducer/src/: ThreadPool.cpp  mapper_reducer.cpp  utils.cpp
MapperReducer/test/: CMakeLists.txt
MapperReducer/test/unit_test/: CMakeLists.txt
MapperReducer/tests/: CMakeLists.txt
MapperReducer/tests/unit_test/: is_alphanumeric.test.cpp
